# superin

./: .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  SECURITY_FIXES.md  codegen.config.yaml  commitlint.config.js  fix_agent.md  lint-staged.config.js  openapi.json  package-lock.json  package.json  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/apps/: __init__.py  auth.py  auth_schemas.py  catalog.py  chat.py
backend/apps/billing/: __init__.py  manifest.py  models.py  routes.py  schemas.py
backend/apps/calendar/: __init__.py  agent.py  enums.py  manifest.py  models.py  prompts.py  repository.py  routes.py  schemas.py  service.py  tools.py
backend/apps/finance/: __init__.py  agent.py  enums.py  manifest.py  models.py  prompts.py  repository.py  routes.py  schemas.py  service.py  tools.py
backend/apps/habit/: __init__.py  agent.py  manifest.py  models.py  repository.py  routes.py  schemas.py  service.py  tools.py
backend/apps/todo/: __init__.py  agent.py  enums.py  manifest.py  models.py  prompts.py  repository.py  routes.py  schemas.py  service.py  tools.py
backend/core/: __init__.py  auth.py  catalog_service.py  config.py  constants.py  db.py  discovery.py  exceptions.py  http_utils.py  index_contract.py  input_sanitizer.py  logging_middleware.py  main.py  models.py  registry.py  security.py  timezone.py  verify.py  widget_config.py  workspace.py
backend/core/admin/: __init__.py  routes.py  schemas.py  service.py
backend/core/agents/: __init__.py  app_state.py  base_app.py  root.py  runtime_context.py  tool_middleware.py
backend/core/auth/: avatar_storage.py  dependencies.py  routes.py  schemas.py
backend/core/catalog/: __init__.py  routes.py  service.py
backend/core/chat/: __init__.py  routes.py  service.py
backend/core/middleware/: logging.py  security.py
backend/core/migrations/: migrate_widget_preference_grid.py
backend/core/subscriptions/: __init__.py  _shared.py  model.py  payos.py  routes.py  schemas.py  service.py  stripe.py
backend/core/utils/: index_contract.py  limiter.py  object_storage.py  rate_limit.py  sanitizer.py  timezone.py
backend/core/workspace/: __init__.py  routes.py  service.py
backend/shared/: __init__.py  agent_config.py  agent_context.py  beanie_utils.py  confirmation.py  enums.py  interfaces.py  llm.py  normalization.py  permissions.py  preference_utils.py  schemas.py  tool_errors.py  tool_results.py  tool_time.py
backend/tests/: tool_runtime.py
backend/tests/apps/: __init__.py  test_calendar_service.py  test_calendar_tools.py  test_calendar_widgets.py  test_finance_service.py  test_finance_tools.py  test_todo_tools.py  test_transaction_contexts.py
backend/tests/core/: test_base_app_agent.py  test_catalog_service.py  test_chat_route_helpers.py  test_config.py  test_local_dev_auth.py  test_object_storage_utils.py  test_registry.py  test_root_agent_tool_scoping.py  test_sanitizer.py  test_subscription_service.py  test_tool_middleware.py  test_verify_plugins.py
backend/tests/shared/: test_beanie_utils.py  test_llm.py  test_preference_utils.py  (+3 more)
(+354 files in other folders)
